--- a/WestsideAuto/style/myStyle.css
+++ b/WestsideAuto/style/myStyle.css
@@ -18,6 +18,12 @@ a:hover {
     padding: 20px 20px 20px 20px;
     min-width: 100%;
     margin-bottom: 20px;
+    box-shadow: 3px 3px 5px #888888;
+}
+
+.homeOptions:hover {
+    background-color: #719cff;
+    color: white;
 }
 
 .jumbotron {
